--- a/iWork.Web.UI/Content/i18n/fa.json
+++ b/iWork.Web.UI/Content/i18n/fa.json
@@ -16,7 +16,7 @@
         "kitchensink": "صفحه چرکنویس"
     },
     "form": {
-        "fullname": "نام و نام خوانوادگی",
+        "fullname": "نام و نام خانوادگی",
         "fax": "دورنما",
         "tell": "تلفن",
         "home": "محل سکونت",
@@ -36,7 +36,7 @@
     },
     "grid": {
         "#": "ردیف",
-        "fullname": "نام و نام خوانوادگی",
+        "fullname": "نام و نام خانوادگی",
         "fax": "دورنما",
         "tell": "تلفن",
         "home": "محل سکونت",
